--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 Fonts
 ===============
 */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap');
 
 /*
 =============== 
@@ -38,8 +38,8 @@ Variables
   --clr-grey-9: hsl(212, 33%, 89%);
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-white: #fff;
-  --ff-primary: "Roboto", sans-serif;
-  --ff-secondary: "Open Sans", sans-serif;
+  --ff-primary: 'Roboto', sans-serif;
+  --ff-secondary: 'Open Sans', sans-serif;
   --transition: all 0.3s linear;
   --spacing: 0.25rem;
   --radius: 0.5rem;
@@ -365,7 +365,7 @@ Hero
   }
   .hero-img::before,
   .about-img::before {
-    content: "";
+    content: '';
     width: 100%;
     height: 100%;
     border: 0.25rem solid var(--clr-primary-5);
@@ -512,7 +512,7 @@ Projects
   opacity: 0.1;
 }
 .project::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -545,8 +545,8 @@ Projects
     grid-template-rows: 200px 200px;
     gap: 1rem;
     grid-template-areas:
-      "a b b"
-      "a c d";
+      'a b b'
+      'a c d';
   }
   .project-1 {
     grid-area: c;
@@ -589,7 +589,7 @@ Connect
   z-index: -2;
 }
 .connect::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -948,6 +948,7 @@ Products Page
 .project-page-center {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  gap: 2rem;
 }
 .project-section {
   min-height: calc(60vh - 5rem - 198px);
