--- a/css/styles.css
+++ b/css/styles.css
@@ -912,6 +912,8 @@ Products Page
 .project-container img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
+  height: 20rem;
+  object-fit: cover;
 }
 .project-container a {
   position: absolute;
@@ -930,6 +932,8 @@ Products Page
 }
 .project-details {
   padding: 2rem 1.5rem;
+  display: grid;
+  grid-template-rows: auto 100px auto;
 }
 .project-footer {
   display: grid;
